[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pointwise_in_time"
version = "0.0.1"
authors = [
  { name="Noel Brindise", email="nbrindise@gmail.com" },
]
description = "A package for pointwise-in-time linear temporal logic diagnostics"
readme = "readme.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/n-brindise/live_expl"